--- a/ulo/static/css/base.css
+++ b/ulo/static/css/base.css
@@ -166,7 +166,7 @@ nav div.col{
 
 }
 
-span.page_loading{
+span.loading_bar{
 
 	z-index: 10;
 	position: absolute;
@@ -746,6 +746,78 @@ body.nav_ul_open{
 
 }
 
+.cloak {
+
+	/* IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	/* IE 5-7 */
+	filter: alpha(opacity=0);
+	/* Netscape */
+	-moz-opacity: 0;
+	/* Safari 1.x */
+	-khtml-opacity: 0;
+	/* Other Browsers */
+	opacity: 0;
+
+}
+
+.disabled{
+
+	/* IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	/* IE 5-7 */
+	filter: alpha(opacity=50);
+	/* Netscape */
+	-moz-opacity: 0.5;
+	/* Safari 1.x */
+	-khtml-opacity: 0.5;
+	/* Other Browsers */
+	opacity: 0.5;
+
+}
+
+.modal {
+
+	position: relative;
+	text-align: center;
+	position: fixed;
+	z-index: 9000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgb(255,255,255); /* Fallback color */
+	background-color: rgba(0,0,0,0.4);
+
+}
+
+/* Prevent the body from scrolling when the modal is open */
+body.modal_open{
+
+	overflow: hidden;
+	position: relative;
+
+}
+
+
+.animation{
+
+	display: none;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	margin: auto;
+
+}
+
+.pulse{
+
+	-webkit-animation: 2s linear 0s infinite normal none running pulse;
+	-moz-animation: 2s linear 0s infinite normal none running pulse;
+	-o-animation: 2s linear 0s infinite normal none running pulse;
+	animation: 2s linear 0s infinite normal none running pulse;
+
+}
 
 @-webkit-keyframes pulse{
 
@@ -817,27 +889,113 @@ body.nav_ul_open{
 
 }
 
-.animation{
 
-	display: none;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	margin: auto;
+.bounce{
+
+	display: block;
+	padding-bottom: 20px;
+	width: 70px;
+	height: 20px;
 
 }
 
-.pulse{
+.bounce > div{
 
-/*	display: block;
 	width: 20px;
 	height: 20px;
+	background-color: #333;
 	border-radius: 100%;
-	background-color: #1C82DA;*/
+	display: inline-block;
+	vertical-align: top;
 
-	-webkit-animation: 2s linear 0s infinite normal none running pulse;
-	-moz-animation: 2s linear 0s infinite normal none running pulse;
-	-o-animation: 2s linear 0s infinite normal none running pulse;
-	animation: 2s linear 0s infinite normal none running pulse;
+	-webkit-animation: bouncedelay 1.4s infinite ease-in-out both;
+	-moz-animation: bouncedelay 1.4s infinite ease-in-out both;
+	-o-animation: bouncedelay 1.4s infinite ease-in-out both;
+	animation: bouncedelay 1.4s infinite ease-in-out both;
+
+}
+
+.bounce .one{
+
+	-webkit-animation-delay: -0.32s;
+	-moz-animation-delay: -0.32s;
+	-o-animation-delay: -0.32s;
+	animation-delay: -0.32s;
+
+}
+
+.bounce .two{
+
+	-webkit-animation-delay: -0.16s;
+	-moz-animation-delay: -0.16s;
+	-o-animation-delay: -0.16s;
+	animation-delay: -0.16s;
+
+}
+
+@-webkit-keyframes bouncedelay{
+
+	0%, 80%, 100% {
+
+		-webkit-transform: scale(0.4)
+
+	}
+
+	40%{
+
+		-webkit-transform: scale(1.0)
+
+	}
+
+}
+
+@-moz-keyframes pulse{
+
+	0%, 80%, 100% {
+
+		-moz-transform: scale(0.4)
+
+	}
+
+	40%{
+
+		-moz-transform: scale(1.0)
+
+	}
+
+}
+
+@-o-keyframes pulse{
+
+	0%, 80%, 100% {
+
+		-o-transform: scale(0.4)
+
+	}
+
+	40%{
+
+		-o-transform: scale(1.0)
+
+	}
+
+}
+
+@keyframes bouncedelay{
+
+	0%, 80%, 100%{
+	
+		-webkit-transform: scale(0.4);
+		transform: scale(0.4);
+	
+	}
+
+	40%{
+
+		-webkit-transform: scale(1.0);
+		transform: scale(1.0);
+	
+	}
 
 }
 
