--- a/ulo/static/css/users/login.css
+++ b/ulo/static/css/users/login.css
@@ -146,7 +146,8 @@ div.login_actions{
 
 }
 
-input#login_submit{
+input#login_submit,
+input#login_submit:focus{
 
 	background-color: #333;
 	color: #FFF;
