--- a/ulo/templates/base_ajax.html
+++ b/ulo/templates/base_ajax.html
@@ -10,7 +10,7 @@
 
     </li><li>
         
-        <a href="#" class="ellipsis" data-apl="true" title="Post">Post</a>
+        <a href="{% url 'posts:post' %}" class="ellipsis" data-apl="true" title="Post">Post</a>
 
     </li><li>
         
