--- a/ulo/static/css/users/profile.css
+++ b/ulo/static/css/users/profile.css
@@ -56,7 +56,7 @@ a.connect > span,
 a.edit_profile > span{
 
 	display: inline-block;
-	vertical-align: top;
+	vertical-align: middle;
 	line-height: 32px;
 
 }
@@ -181,19 +181,19 @@ a.edit_profile > span.text{
 
 }
 
-#picture_actions button{
+#picture_actions .button{
 
 	position: relative;
 	padding: 0 10px;
-	width: 100%;
 	height: 40px;
 	line-height: 40px;
 	background-color: transparent;
 	overflow: hidden;
+	text-align: center;
 
 }
 
-#picture_actions button:hover{
+#picture_actions .button:hover{
 
 	background-color: #333;
 	color: #FFF;
@@ -202,6 +202,7 @@ a.edit_profile > span.text{
 
 #picture_actions button.delete_picture{
 
+	width: 100%;
 	border-top: 1px solid #333;
 
 }
@@ -212,12 +213,6 @@ a.edit_profile > span.text{
 	background-color: #FFF;
 	border: 1px solid #333;
 	overflow: hidden;
-
-}
-
-#picture_actions .caret_up{
-
-	border-bottom: 8px solid #333;
 
 }
 
@@ -422,34 +417,10 @@ span.icon_location{
 	position: relative;
 	display: block;
 	width: 100%;
-	padding-bottom: 75%; /* 4:3 */
+	padding-bottom: 56.25%; /* 16:9 */
 	overflow: hidden;
 
 	background-color: #FFF;
-
-}
-
-#posts_tab div.video_icon{
-
-	margin: auto;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-
-	width: 42px;
-	height: 42px;
-	line-height: 42px;
-	border-radius: 8px;
-	background-color: #1C82DA;
-	background-color: rgba(28,130,218, 0.6);
-
-	text-align: center;
-
-}
-
-#posts_tab span.icon_play{
-
-	display: inline-block;
-	vertical-align: middle;
 
 }
 
@@ -484,9 +455,7 @@ span.icon_location{
 		The natural height of the element when title 
 		is two lines long.
 	*/
-	height: 77px;
-
-	border-top: 1px solid #333;
+	height: 75px;
 
 }
 
@@ -522,7 +491,6 @@ span.icon_location{
 
 	position: absolute;
 	left:20px; right: 20px; bottom: 20px;
-	padding-top: 10px;
 
 }
 
