--- a/ulo/templates/posts/post.html
+++ b/ulo/templates/posts/post.html
@@ -36,8 +36,8 @@
 
 				<div class="file_input">
 					
-					<span class="icon icon_video"></span>
 					<p>Select your video</p>
+					<span class="icon icon_video"></span>
 					{{ form.file }}
 
 				</div>
@@ -310,7 +310,7 @@
 					<div id="video_thumbnail" class="editor_slider_container">
 						<div class="editor_slider">
 
-							<div class="slider_container">
+							<div class="thumbnail_slider_container slider_container">
 								<button id="thumbnail_slider" type="button" class="slider">
 									<span class="hide">Thumbnail slider</span>
 									<span class="splitter"></span>
