--- a/ulo/static/css/base.css
+++ b/ulo/static/css/base.css
@@ -180,7 +180,7 @@ header span.loading_bar{
 	z-index: 10;
 	position: absolute;
 	top: 48px; left: 0;
-	transition: width 0.6s ease;
+	transition: width 0.4s ease;
 	height: 1px;
 	background-color: #9219DD;
 	box-shadow: 0 1px 2px 0.5px rgba(51, 51, 51, 0.2);
@@ -894,15 +894,13 @@ body.modal_open{
 
 	0%, 100%{
 
-		opacity: 0.4;
-		-webkit-transform: scale(0.5);
+		opacity: 1;
 
 	}
 	
 	50%{
 
-		opacity: 0.8;
-		-webkit-transform: scale(1);
+		opacity: 0.4;
 
 	}
 
@@ -912,15 +910,13 @@ body.modal_open{
 
 	0%, 100%{
 
-		opacity: 0.4;
-		-moz-transform: scale(0.5);
+		opacity: 1;
 
 	}
 	
 	50%{
 
-		opacity: 0.8;
-		-moz-transform: scale(1);
+		opacity: 0.4;
 
 	}
 
@@ -930,15 +926,13 @@ body.modal_open{
 
 	0%, 100%{
 
-		opacity: 0.4;
-		-o-transform: scale(0.5);
+		opacity: 1;
 
 	}
 	
 	50%{
 
-		opacity: 0.8;
-		-o-transform: scale(1);
+		opacity: 0.4;
 
 	}
 
@@ -1021,7 +1015,7 @@ body.modal_open{
 
 }
 
-@-moz-keyframes pulse{
+@-moz-keyframes bouncedelay{
 
 	0%, 80%, 100% {
 
@@ -1037,7 +1031,7 @@ body.modal_open{
 
 }
 
-@-o-keyframes pulse{
+@-o-keyframes bouncedelay{
 
 	0%, 80%, 100% {
 
@@ -1057,14 +1051,12 @@ body.modal_open{
 
 	0%, 80%, 100%{
 	
-		-webkit-transform: scale(0.4);
 		transform: scale(0.4);
 	
 	}
 
 	40%{
 
-		-webkit-transform: scale(1.0);
 		transform: scale(1.0);
 	
 	}
