--- a/ulo/static/css/posts/post.css
+++ b/ulo/static/css/posts/post.css
@@ -114,10 +114,10 @@
 
 #file_container .file_input{
 
-	width: 100%;
-	height: 40px;
-	border-radius: 4px;
-	background-color: #F6F6F6;
+	width: auto;
+	height: auto;
+	margin: auto;
+	opacity: 0.6;
 
 }
 
@@ -125,22 +125,20 @@
 
 	margin: 0;
 	font-size: 14px;
-	line-height: 40px;
-	text-align: left;
-	color: #A9A9A9;
+	text-align: center;
 
 }
 
-#file_container .file_input:hover p{
+#file_container .file_input:hover{
 
-	color: #333;
+	opacity: 1;
 
 }
 
 #file_container span.icon{
 
-	float: left;
-	margin: 7px 15px;
+
+	margin: auto;
 
 }
 
