--- a/ulo/templates/base.html
+++ b/ulo/templates/base.html
@@ -89,6 +89,8 @@
 
                                 <input class="box_border" type="search" name="q" autofocus="autofocus" value="{{ q }}" autocomplete="off" placeholder="Search {{ site_name }}">
 
+                                <input class="query_filter" type="hidden" name="{{ query_filter.FILTER_KEY }}" value="">
+
                                 <button class="toggle_filter_ul" data-toggle="filter_ul" type="button">
 
                                     <span class="icon icon_down_arrow"></span>
